--- a/unpackaged/config/experiences/package.xml
+++ b/unpackaged/config/experiences/package.xml
@@ -2,7 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>*</members>
-        <name>CustomSite</name>
+        <name>ExperienceBundle</name>
     </types>
-    <version>60.0</version>
+    <version>56.0</version>
 </Package>
