--- a/unpackaged/pre/roles/package.xml
+++ b/unpackaged/pre/roles/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
-        <name>CustomSite</name>
+        <members>Summit_Events_Community_Owner</members>
+        <name>Role</name>
     </types>
-    <version>60.0</version>
+    <version>65.0</version>
 </Package>
