--- a/unpackaged/config/cspTrustedSites/package.xml
+++ b/unpackaged/config/cspTrustedSites/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account</members>
-        <name>SharingRules</name>
+        <members>*</members>
+        <name>CustomSite</name>
     </types>
-    <version>60.0</version>
+    <version>64.0</version>
 </Package>
