--- a/unpackaged/config/cspTrustedSites/package.xml
+++ b/unpackaged/config/cspTrustedSites/package.xml
@@ -2,7 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>*</members>
-        <name>CustomSite</name>
+        <name>CspTrustedSite</name>
     </types>
     <version>64.0</version>
 </Package>
